--- a/Buoi6/home.css
+++ b/Buoi6/home.css
@@ -1,90 +1,151 @@
-.title{
-
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+    outline: none;
+    border: none;
 }
-.nav{
-
+body {
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #373a3c;
+    background-color: #fff;
 }
-.nav-item{
-
+.tieude{
+    display: flex;
+    justify-content: space-between;
+    padding: 8px 16px;
 }
-.home{
-
+.tieude1  {
+    margin-left: 270px;
 }
-.sign-in{
-
+.tieude1 a
+{
+    text-decoration: none;
+    font-size: 24px;
+    font-weight:bold;
+    color: #5CB85C ;
 }
-.Sign-in{
-
+.tieude2 {
+    margin-right:270px;
+    padding: 5px;
 }
-.sign-up{
-
+.tieude2 a {
+    padding: 5px;
+    text-decoration: none;
+    font-size: 17px;
+    font-weight:600;
+    color:rgba(0, 0, 0, 0.3);
+    
 }
-.Sign-up{
-
+.tieude2 a:hover {
+    color: black;
+    
 }
-.banner{
-
+.main
+{   
+    background-color: #35ce97;
+    width: 100%;
+    height: 170px;
+    align-items: center;
+    justify-content: center;
+    box-shadow: -6px 2px 9px 0px black;;
 }
-.big{
 
+.mainbig a {
+    text-decoration: none;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    font-size: 45px;
+    font-weight: bold;
+    color: #fff;
 }
-.small{
-
+.mainsmall{
+    display: flex;
+    justify-content: center;
+    font-size: 25px;
+    color:#fff ;
+    font-weight: 300 !important
 }
-.content{
-
+.tieudeduoi {
+    display: flex;
+    justify-content: center;
+    align-items:center ;
+    margin-left:10rem;
 }
-.feed{
-
+.tieudeduoi1 {
+    display: flex;
+   
 }
-.tab-bar{
-
+.tieudetrai {
+    margin-left: 120px;
+    margin-top: 40px;
+    width: 55%;
 }
-.tab{
-
+.content {
+    margin-top: 25px;
 }
-.posts{
-
+.nametext {
+    padding-bottom: 20px;
+    position: relative;
 }
-.post{
-
+.nametext a  {
+    color:  green ;
+    text-decoration: none;
+    font-size: 16px;
 }
-.info{
-
+.nametext a:hover {
+    color: green ;
+    text-decoration: underline;
 }
-.author{
-
+.nametext img {
+    
+    border-radius: 30px;
 }
-.avatar{
-
+.nametext p {
+    font-size: 15px;  
 }
-.account{
-
+.content p {
+    color:  rgb(60, 58, 58);
 }
-.name{
-
+.a {
+    position: absolute;
+    left: 40px;
+    top:-8px
 }
-.date{
-
+hr {
+    height: 1px;
+    background-color: rgb(53, 51, 51);
+    margin-top: 20px;
 }
-.Like{
-
+.tieude3 span {
+    color: green;
+    padding: 22px;
+    border: none;
+    border-bottom: 2px solid green ;
 }
-.text{
 
+
+.tieudephai {
+    margin: 30px;
+    width: 240px;
+    height: 150px;
+    padding: 5px 10px 10px 10px;
+    background: #f3f3f3;
+    border-radius: 4px;
 }
-.text-main{
-
+.row1 p {
+    font-size: 15px;}
+.txt{
+    font-size: 20px;
 }
-.text-sub{
-
-}
-.comment{
-
-}
-.Read-more{
-
-}
-.tag{
-
+.tags{
+    padding: 2px;
+    font-size: 15px;
+    background-color: rgb(45, 44, 44);
+    border-radius: 10px;;
+    border: solid 1px rgb(45, 44, 44);
+    color: #f3f3f3;
 }
